--- a/_pgbackup/index_1656582686.html
+++ b/_pgbackup/index_1656582686.html
@@ -23,40 +23,43 @@
                 </button>                 
                 <div class="collapse navbar-collapse " id="navbarNavDropdown-3"> 
                     <ul class="ms-auto navbar-nav"> 
-                        <li class="nav-item"> 
+                        <li class="nav-item">                              
 </li>                         
-                        <li class="nav-item"> 
+                        <li class="nav-item">                              
 </li>                         
-                        <li class="nav-item"> 
+                        <li class="nav-item">                              
 </li>                         
-                        <li class="nav-item dropdown"> 
+                        <li class="nav-item dropdown">                              
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
                                 <a class="dropdown-item" href="#">Action</a> 
                                 <a class="dropdown-item" href="#">Another action</a> 
                                 <a class="dropdown-item" href="#">Something else here</a> 
                             </div>                             
                         </li>                         
-                        <li class="nav-item"> 
+                        <li class="nav-item">                              
 </li>                         
-                    </ul>                     
+                    </ul>                                          
                 </div>                 
                 <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group"> 
-                    <input type="checkbox" class="btn-check" id="groupcheckbox1" autocomplete="off"> 
-                    <input type="checkbox" class="btn-check" id="groupcheckbox2" autocomplete="off"> 
+                    <input type="checkbox" class="btn-check" id="groupcheckbox1" autocomplete="off">                      
+
+                    <input type="checkbox" class="btn-check" id="groupcheckbox2" autocomplete="off">                                                                
                 </div>
             </div>
             <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group" style="width: 418px;"> 
                 <input type="checkbox" class="btn-check" id="groupcheckbox3" autocomplete="off"> 
                 <label class="btn btn-outline-white text-white" for="groupcheckbox3">Home</label>                 
+
                 <input type="checkbox" class="btn-check" id="groupcheckbox4" autocomplete="off"> 
                 <label class="btn btn-outline-white text-white" for="groupcheckbox4">How to use</label>                 
+
                 <input type="checkbox" class="btn-check" id="groupcheckbox5" autocomplete="off"> 
                 <label class="btn btn-outline-white text-white" for="groupcheckbox5">About us</label>                 
             </div>
-            <div class="btn-group" role="group" aria-label="Basic example"> 
+            <div class="btn-group" role="group" aria-label="Basic example">                                                    
 </div>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups"> 
-                <div class="btn-group me-2" role="group" aria-label="group"> 
+                <div class="btn-group me-2" role="group" aria-label="group">                                                                                     
 </div>                 
             </div>             
         </nav>
@@ -77,13 +80,14 @@
                                     <span class="display-4 fw-normal text-white">39</span> 
                                     <span class="align-self-end">/mo</span> 
                                 </div>
-                                <input type="image" class="submit" name="submit" src="https://mainnet.demo.btcpayserver.org/img/paybutton/pay.svg" style="width:209px" alt="Pay with BTCPay Server, a Self-Hosted Bitcoin Payment Processor"> 
+                                <input type="image" class="submit" name="submit" src="https://mainnet.demo.btcpayserver.org/img/paybutton/pay.svg" style="width:209px" alt="Pay with BTCPay Server, a Self-Hosted Bitcoin Payment Processor">                                  
                                 <div class="pb-5 ps-3 pe-3 pt-4"> 
                                     <ul class="list-unstyled mb-4"> 
-                                        <style>.btcpay-form { display: inline-flex; align-items: center; justify-content: center; } .btcpay-form--inline { flex-direction: row; } .btcpay-form--block { flex-direction: column; } .btcpay-form--inline .submit { margin-left: 15px; } .btcpay-form--block select { margin-bottom: 10px; } .btcpay-form .btcpay-custom-container { text-align: center; } .btcpay-custom { display: flex; align-items: center; justify-content: center; } .btcpay-form .plus-minus { cursor: pointer; font-size: 25px; line-height: 25px; background: #DFE0E1; height: 30px; width: 45px; border: none; border-radius: 60px; margin: auto 5px; display: inline-flex; justify-content: center; } .btcpay-form select { -moz-appearance: none; -webkit-appearance: none; appearance: none; color: currentColor; background: transparent; border: 1px solid transparent; display: block; padding: 1px; margin-left: auto; margin-right: auto; font-size: 11px; cursor: pointer; } .btcpay-form select:hover { border-color: #ccc; } .btcpay-form option { color: #000; background: rgba(0,0,0,.1); } .btcpay-input-price { -moz-appearance: textfield; border: none; box-shadow: none; text-align: center; font-size: 25px; margin: auto; border-radius: 5px; line-height: 35px; background: #fff; } .btcpay-input-price::-webkit-outer-spin-button, .btcpay-input-price::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }</style>                                         
+                                        <style> .btcpay-form { display: inline-flex; align-items: center; justify-content: center; } .btcpay-form--inline { flex-direction: row; } .btcpay-form--block { flex-direction: column; } .btcpay-form--inline .submit { margin-left: 15px; } .btcpay-form--block select { margin-bottom: 10px; } .btcpay-form .btcpay-custom-container{ text-align: center; }.btcpay-custom { display: flex; align-items: center; justify-content: center; } .btcpay-form .plus-minus { cursor:pointer; font-size:25px; line-height: 25px; background: #DFE0E1; height: 30px; width: 45px; border:none; border-radius: 60px; margin: auto 5px; display: inline-flex; justify-content: center; } .btcpay-form select { -moz-appearance: none; -webkit-appearance: none; appearance: none; color: currentColor; background: transparent; border:1px solid transparent; display: block; padding: 1px; margin-left: auto; margin-right: auto; font-size: 11px; cursor: pointer; } .btcpay-form select:hover { border-color: #ccc; } .btcpay-form option { color: #000; background: rgba(0,0,0,.1); } .btcpay-input-price { -moz-appearance: textfield; border: none; box-shadow: none; text-align: center; font-size: 25px; margin: auto; border-radius: 5px; line-height: 35px; background: #fff; }.btcpay-input-price::-webkit-outer-spin-button, .btcpay-input-price::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; } </style>                                         
+
                                         <form method="POST" action="https://mainnet.demo.btcpayserver.org/apps/8Ahmuj4P5rDEjKQMYBr5obowzaT/pos" class="btcpay-form btcpay-form--block"> 
                                             <input type="hidden" name="storeId" value="2bkp8gMjvszv6NtXStbjXo1c23XMKarHpPBjJYYEjWPY"/> 
-                                            <input type="hidden" name="amount" value="39"/> 
+                                            <input type="hidden" name="amount" value="39"/>                                              
                                         </form>                                         
                                         <div id="smart-button-container"> 
                                             <div style="text-align: center;"> 
@@ -130,29 +134,31 @@
       }).render('#paypal-button-container');
     }
     initPayPalButton();
-  </script>                                                                                                                           
-                                    </ul>                                     
-                                </div>                                 
-                            </div>                             
-                        </div>                         
-                        <div class="col-lg-4 col-md-6 py-3"> 
-                            <div class="bg-dark border rounded text-transparent">                                  
-                                <div class="pb-5 ps-3 pe-3 pt-4" style="height: 390px;"> 
-                                    <ul class="list-unstyled mb-4">                                          
-                                        <li class="pb-2 pt-2">100 GB Storage</li>
-                                        <li class="pb-2 pt-2">24/7 Support</li>                                         
-                                        <li class="pb-2 pt-2">2 TB Bandwidth</li>                                         
-                                        <li class="pb-2 pt-2">Custom Domain</li>                                         
-                                        <li class="pb-2 pt-2">24/7 Support</li>
-                                        <li class="pb-2 pt-2">24/7 Support</li>
-                                        <li class="pb-2 pt-2">24/7 Support</li>
-                                        <li class="pb-2 pt-2">24/7 Support</li>
-                                        <li class="pb-2 pt-2">24/7 Support</li>
-                                        <li class="pb-2 pt-2">24/7 Support</li>                                         
+  </script>                                         
+                                        <li class="pb-2 pt-2"></li>
+                                        <li class="pb-2 pt-2"></li>                                                                                  
+                                        <li class="pb-2 pt-2"></li>                                         
                                     </ul>                                                                          
                                 </div>                                 
                             </div>                             
                         </div>                         
+                        <div class="col-lg-4 col-md-6 py-3"> 
+                            <div class="bg-dark border rounded text-transparent"> 
+                                <div class="align-items-center d-flex fw-light h5 justify-content-center pb-4 ps-3 pe-3 pt-4">
+                                    <span class="align-self-start">imagini</span>
+                                </div>                                                                  
+                                <div class="pb-5 ps-3 pe-3 pt-4"> 
+                                    <ul class="list-unstyled mb-4"> 
+                                        <li class="pb-2 pt-2">100 Pages</li>                                         
+                                        <li class="pb-2 pt-2">100 GB Storage</li>                                         
+                                        <li class="pb-2 pt-2">2 TB Bandwidth</li>                                         
+                                        <li class="pb-2 pt-2">Custom Domain</li>                                         
+                                        <li class="pb-2 pt-2">24/7 Support</li>                                         
+                                    </ul>                                     
+                                    <a href="#" class="btn btn-dark fw-light pb-2 pe-4 ps-4 pt-2">Sign Up</a> 
+                                </div>                                 
+                            </div>                             
+                        </div>                                                  
                     </div>                     
                 </div>                 
             </div>             
