--- a/_pgbackup/about-us_1659714757.html
+++ b/_pgbackup/about-us_1659714757.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Crypto Screener">
+        <meta name="description" content="Pinegrow Web Editor - SAAS Bootstrap v5 Template">
         <meta name="author" content="">
-        <title>Crypto Screener</title>
+        <title>Pinegrow | Bootstrap Blocks Template</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="blocks.css">
@@ -77,7 +77,7 @@ You should consider every trade like a business plan, doesn&apos;t matter what s
 We risk only 1% of our capital. 
 For example, if we have 3-4-5 stop losses in a row only one take profit is sufficient to return all losses and increase our profit. <br>So if you have a 60%+ win rate, this risk management will help you to increase your profits.<br><br><br></h2>
         <section> 
-            <div class="container"> 
+            <div class="container">                  
 </div>             
         </section>
         <section> 
@@ -278,6 +278,7 @@ For example, if we have 3-4-5 stop losses in a row only one take profit is suffi
                         <input type="hidden" name="choiceKey" value="39"/> 
                         <input type="hidden" name="amount" value="39"/> 
                         <script type="text/javascript">(function() {var script=document.createElement("script");script.type="text/javascript";script.async =true;script.src="//telegram.im/widget-button/index.php?id=@yazz0r";document.getElementsByTagName("head")[0].appendChild(script);})();</script>                         
+
                         <a href="https://telegram.im/@yazz0r" target="_blank" class="telegramim_button telegramim_shadow telegramim_pulse" style="font-size:20px;width:212px;background:#27A5E7;box-shadow:1px 1px 5px #27A5E7;color:#FFFFFF;border-radius:100px;" title=""><i></i></a> 
                     </form>
                     <style>.btcpay-form { display: inline-flex; align-items: center; justify-content: center; } .btcpay-form--inline { flex-direction: row; } .btcpay-form--block { flex-direction: column; } .btcpay-form--inline .submit { margin-left: 15px; } .btcpay-form--block select { margin-bottom: 10px; } .btcpay-form .btcpay-custom-container { text-align: center; } .btcpay-custom { display: flex; align-items: center; justify-content: center; } .btcpay-form .plus-minus { cursor: pointer; font-size: 25px; line-height: 25px; background: #DFE0E1; height: 30px; width: 45px; border: none; border-radius: 60px; margin: auto 5px; display: inline-flex; justify-content: center; } .btcpay-form select { -moz-appearance: none; -webkit-appearance: none; appearance: none; color: currentColor; background: transparent; border: 1px solid transparent; display: block; padding: 1px; margin-left: auto; margin-right: auto; font-size: 11px; cursor: pointer; } .btcpay-form select:hover { border-color: #ccc; } .btcpay-form option { color: #000; background: rgba(0,0,0,.1); } .btcpay-input-price { -moz-appearance: textfield; border: none; box-shadow: none; text-align: center; font-size: 25px; margin: auto; border-radius: 5px; line-height: 35px; background: #fff; } .btcpay-input-price::-webkit-outer-spin-button, .btcpay-input-price::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }</style>                     
@@ -390,7 +391,7 @@ For example, if we have 3-4-5 stop losses in a row only one take profit is suffi
                                 <br>we share our vision about market , 
                                 <br>ideeas and some trades.
                                 <br>
-                            </li>                             
+                            </li>                                                                                       
                         </ul>                         
                     </div>                     
                 </div>                 
