--- a/_pgbackup/how-to-use_1659714757.html
+++ b/_pgbackup/how-to-use_1659714757.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Crypto Screener">
+        <meta name="description" content="Pinegrow Web Editor - SAAS Bootstrap v5 Template">
         <meta name="author" content="">
-        <title>Crypto Screener</title>
+        <title>Pinegrow | Bootstrap Blocks Template</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="blocks.css">
