--- a/_pgbackup/about-us_1659775975.html
+++ b/_pgbackup/about-us_1659775975.html
@@ -53,7 +53,9 @@
         <section class="bg-dark pb-5 pt-5 text-center"> 
             <div class="container pb-4 pt-4"> 
                 <h2 class="fw-normal h1 mb-1 text-white" style="font-size: 20px;">- About Us -<br>We are a team of like-minded traders. The desire to achieve optimal results in trading in the financial markets has united us.<br><br><br></h2>
-                <h2 class="fw-normal h1 mb-1 text-white" style="font-size: 20px;"><br><br>Our strategy is based on technical analyses, liquidity, and big players on market. Using services like &rdquo;cscalp&rdquo; + our website that helps track large densities (volumes) in the spot markets on Binance adds confidence and accuracy to our trades. Monitoring big players and liquidity guarantees the success and profits of our signals. The risk-management we use implies a short stop-loss with only 1%, significant take profit, and minimal leverage with a bigger deposit. ( more examples and info below )<br><br><br></h2> 
+                <h2 class="fw-normal h1 mb-1 text-white" style="font-size: 20px;"><br><br>Our strategy is based on technical analyses, liquidity, big players on market . 
+Using services like &rdquo;cscalp&rdquo; + our website that help track large densities (volumes) in the spot markets on Binance adds confidence and accuracy to our trades. Monitoring big players and liquidity guarantees the success and profits of our signals.
+The risk-management we use implies a short stop-loss with only 1% , significant take profit, and minimal leverage with a bigger deposit. ( more examples and info below )<br><br><br></h2> 
                 <div class="col-xl-11 ms-auto me-auto px-0"> 
 </div>                 
             </div>             
@@ -383,11 +385,10 @@ For example, if we have 3-4-5 stop losses in a row only one take profit is suffi
                                 <br>
                                 <br>
                                 <br>
-                                <br>On News Telegram Channel we share 
-                                <br>actual news about the crypto market, 
-                                <br>helpfully information, sometimes we 
-                                <br>share our vision about market,
-                                <br>ideas and some trades.
+                                <br>On News Telegram Channel we share&nbsp;
+                                <br>actual news about crypto market, helpfully informations , sometimes
+                                <br>we share our vision about market , 
+                                <br>ideeas and some trades.
                                 <br>
                             </li>                             
                         </ul>                         
@@ -395,15 +396,14 @@ For example, if we have 3-4-5 stop losses in a row only one take profit is suffi
                 </div>                 
             </div>             
         </div>
-        <h2 class="fw-normal h1 mb-1 text-center text-white" style="font-size: 20px;"><br><br>We share our ideas and analysis in our private telegram group. <br>You will be able to 
-see our trades, plans, and results. <br>For saving your time you can just copy our ideas and analysis.<br><br><br></h2>
+        <h2 class="fw-normal h1 mb-1 text-center text-white" style="font-size: 20px;"><br><br>We share our ideas and analys on our privateTelegram group. You will be able to&nbsp;<br>see our trades , plans , results. For saving your time you can just copy our ideas and analys.<br><br><br></h2>
         <div class="align-items-center justify-content-center row"> 
             <div class="col-lg-4 col-md-6 py-3"> 
                 <div class="bg-dark border rounded text-center text-transparent" style="height: 400px;"> 
-                    <div class="align-items-center d-flex fw-light h5 justify-content-center pb-4 pe-3 ps-3 pt-4 text-center" style="margin-top: 80px;">
+                    <div class="align-items-center d-flex fw-light h5 justify-content-center pb-4 pe-3 ps-3 pt-4 text-center" style="margin-top: 80px;"> 
                         <span class="align-self-start">$</span> 
                         <span class="display-4 fw-normal text-white">39</span> 
-                        <span class="align-self-end">/month</span>
+                        <span class="align-self-end">/mo</span> 
                     </div>
                     <style>.btcpay-form { display: inline-flex; align-items: center; justify-content: center; } .btcpay-form--inline { flex-direction: row; } .btcpay-form--block { flex-direction: column; } .btcpay-form--inline .submit { margin-left: 15px; } .btcpay-form--block select { margin-bottom: 10px; } .btcpay-form .btcpay-custom-container { text-align: center; } .btcpay-custom { display: flex; align-items: center; justify-content: center; } .btcpay-form .plus-minus { cursor: pointer; font-size: 25px; line-height: 25px; background: #DFE0E1; height: 30px; width: 45px; border: none; border-radius: 60px; margin: auto 5px; display: inline-flex; justify-content: center; } .btcpay-form select { -moz-appearance: none; -webkit-appearance: none; appearance: none; color: currentColor; background: transparent; border: 1px solid transparent; display: block; padding: 1px; margin-left: auto; margin-right: auto; font-size: 11px; cursor: pointer; } .btcpay-form select:hover { border-color: #ccc; } .btcpay-form option { color: #000; background: rgba(0,0,0,.1); } .btcpay-input-price { -moz-appearance: textfield; border: none; box-shadow: none; text-align: center; font-size: 25px; margin: auto; border-radius: 5px; line-height: 35px; background: #fff; } .btcpay-input-price::-webkit-outer-spin-button, .btcpay-input-price::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }</style>                     
                     <form method="POST" action="https://mainnet.demo.btcpayserver.org/apps/3dSN4b3Yj2tWWXDtDfyGtE6LUn7v/pos" class="btcpay-form btcpay-form--block"> 
@@ -514,23 +514,17 @@ see our trades, plans, and results. <br>For saving your time you can just copy o
                 <div class="bg-dark border rounded text-transparent"> 
                     <div class="pb-5 pe-3 ps-3 pt-4 text-center" style="height: 400px;"> 
                         <ul class="list-unstyled mb-4"> 
-                            <li class="pb-2 pt-2">How to pay with BTCPAY?
-                                <br>
-                                <br>1. Click on the Pay button with BTCPAY
-                                <br>
-                                <br>2. On the newly opened link write your email 
-                                <br>and press continue
-                                <br>
-                                <br>3. Scan QR code in your crypto app
-                                <br>
-                                <br>4. After successful payment you will receive an email.
-                                <br>
-                            </li>                                                          
-                            <li class="pb-2 pt-2 text-danger" style="font-size: 10px;">ATTENTION!&nbsp; If you choose to pay via the BTC link, be careful to copy the right link. 
-                                <br>All BTC transactions need 15-60 minutes to be completed.
-                                <br>It&apos;s a one-time purchase, NOT A SUBSCRIBE.YOU CHOICE on what month you want access to the group.
-                                <br>If you have problems with payment you can contact support( link below )
-                                <br>
+                            <li class="pb-2 pt-2">How to pay with BTCPAY ?</li>
+                            <li class="pb-2 pt-2">1. Click on button Pay with BTCPAY</li>                             
+                            <li class="pb-2 pt-2">2. On new opened link write your email and press continue</li>                             
+                            <li class="pb-2 pt-2">3. Scan QR code in your crypto app</li>
+                            <li class="pb-2 pt-2">4. After succefuly payment you will recive an email.</li>
+                            <li class="pb-2 pt-2" style="font-size: 10px;">
+                                <br>ATENTION: If you choice to pay via btc link , be careful to copy right link . All BTC transactions need 15-60 minutes to be completed. 
+                                <br>Its one time&nbsp;purchase , NOT A SUBSCRIBE .
+                                <br>YOU CHOICE on what month you want acces to group.
+                                <br>If you have problems with payment you can contact support 
+                                <br>( link below )
                             </li>                             
                         </ul>                         
                     </div>                     
