--- a/_pgbackup/home_1659774744.html
+++ b/_pgbackup/home_1659774744.html
@@ -241,10 +241,9 @@ $(document).ready(function(){
                         <a class="fw-bold navbar-brand text-transparent text-white" href="about-us.html" target="" style="padding-left: 10px; padding-right: 10px;">ABOUT US</a> 
                     </div>                     
                 </nav>
-                <nav class="bg-black fw-lighter navbar navbar-expand-lg navbar-light py-lg-1 text-danger">
+                <nav class="bg-black fw-lighter navbar navbar-expand-lg navbar-light py-lg-1">
                     <br>
-                    <br>Attention! Do not refresh the page, our service has auto-refresh every 30sec. If data disappear maybe you get temporary restricted by Binance.
-                    <br>
+                    <br>Attention! Do not refresh page , our service have auto-refresh every 30sec. If data disapear maybe you get temporar restricted by Binance. 
                 </nav>
                 <h2 style="height: 130px;">Spot<div class="filter" style="margin-top: 30px;">
                         <button type="button" class="btn btn-success" id="one">From</button>
@@ -273,19 +272,7 @@ var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
 })
 </script>
     </body>
-    <div class="container">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </div>
+    <div class="container pg-empty-placeholder"></div>
     <div class="container pg-empty-placeholder"></div>
     <div class="container pg-empty-placeholder"></div>
     <section> 
