--- a/_pgbackup/home_1659775985.html
+++ b/_pgbackup/home_1659775985.html
@@ -241,7 +241,7 @@ $(document).ready(function(){
                         <a class="fw-bold navbar-brand text-transparent text-white" href="about-us.html" target="" style="padding-left: 10px; padding-right: 10px;">ABOUT US</a> 
                     </div>                     
                 </nav>
-                <nav class="bg-black fw-lighter navbar navbar-expand-lg navbar-light py-lg-1 text-danger">
+                <nav class="bg-black fw-lighter navbar navbar-expand-lg navbar-light py-lg-1">
                     <br>
                     <br>Attention! Do not refresh the page, our service has auto-refresh every 30sec. If data disappear maybe you get temporary restricted by Binance.
                     <br>
