--- a/_pgbackup/how-to-use_1659774900.html
+++ b/_pgbackup/how-to-use_1659774900.html
@@ -54,7 +54,7 @@
             <div class="container pb-4 pt-4"> 
                 <h2 class="fw-normal h1 mb-1 text-white"></h2>
                 <h2 class="fw-normal h1 mb-1 text-white" style="font-size: 20px;"><br>The service helps track large densities (volumes) on the Binance spot market. 
-You will be able to see limit orders that can affect the instrument, the number of coins, dollars in level , and distance to level. 
+You will be able to see limit orders that can affect the instrument, the number of coins, dollars in level , distance to level. 
 Our service will help you to correctly assess the possibility and potential of your transaction.<br></h2> 
             </div>             
         </section>
@@ -62,10 +62,10 @@ Our service will help you to correctly assess the possibility and potential of y
         <section> 
             <div class="container"> 
                 <div class="justify-content-center row"> 
-                    <div class="col-lg-4 col-md-6 py-3" style="margin-top: 122px; font-size: 20px;">You can use filters to find big limit orders faster.
-                        <br>Example: from 100k means that you will search all limit orders for sell and buy from 100.000$ dollars in level. 
+                    <div class="col-lg-4 col-md-6 py-3" style="margin-top: 122px; font-size: 20px;">You can use filtres to find big limit orders faster .
+                        <br>Example : from 100k means that you will search all limits orders for sell and buy from 100.000$ dollars in level .&nbsp;
                         <br>
-                        <br>We recommend using big limit orders from 250.000$
+                        <br>We recomend to use big limit orders from 250.000$
                         <div class="position-relative text-dark"> 
 </div>
                     </div>
@@ -84,7 +84,8 @@ Our service will help you to correctly assess the possibility and potential of y
         <section class="bg-dark pb-5 pt-5 text-center"> 
             <div class="container pb-4 pt-4"> 
                 <h2 class="fw-normal h1 mb-1 text-white"></h2>
-                <h2 class="fw-normal h1 mb-1 text-white" style="font-size: 20px;"><br>Coin name - instrument coin name in USDT<br>Dollars in level - Amount of money on that price<br>&nbsp;Price - Price where you can find that amount of money for the sell/buy limit<br>Coins in level - Numbers of coins on that price<br>Distance to level - Amount of % to understand how far away are sell/buy limit<br>&nbsp;Big players with a big amount of money every time move market, <br>if we know where big players sell/buy something we can have an opportunity for a secure entry in a trade.<br><br>&nbsp;For this example ( below) we know that on XRPUSDT at the price &quot;0.3694&quot; someone wants to sell &quot;1.162.180&quot; coins.<br>&nbsp;If we know that we can use it as a motive to enter into a trade<br></h2> 
+                <h2 class="fw-normal h1 mb-1 text-white" style="font-size: 20px;"><br>Coin name - instrument coin name in USDT<br>Dollars in level - Ammount of money on that price <br>&nbsp;Price - Price where you can find that ammount of money for sell/buy limit<br>Coins in level - Numbers of coins on that price.<br>Distance to level - Ammount of % to understand how far away are sell/buy limit<br><br>&nbsp;Big players with big ammount of money everytime move market , if we know where big players sell/buy something we can have an 
+opportunity for a seacure entry in a trade.<br><br>&nbsp;<br>&nbsp;For this example ( below) we know that on XRPUSDT on price &quot;0.3694&quot; someone want to sell &quot;1.162.180&quot; coins.<br>If we know that we can use it for a motive to entry in a trade&nbsp;</h2> 
             </div>             
         </section>
         <section> 
