--- a/_pgbackup/about-us_1659776879.html
+++ b/_pgbackup/about-us_1659776879.html
@@ -516,17 +516,17 @@ see our trades, plans, and results. <br>For saving your time you can just copy o
                         <ul class="list-unstyled mb-4"> 
                             <li class="pb-2 pt-2">How to pay with BTCPAY?
                                 <br>
-                                <br>1. Click on the button Pay with BTCPAY
+                                <br>1. Click on the Pay button with BTCPAY
                                 <br>
                                 <br>2. On the newly opened link write your email 
                                 <br>and press continue
                                 <br>
-                                <br>3. Scan QR code in your crypto app&nbsp;
+                                <br>3. Scan QR code in your crypto app
                                 <br>
                                 <br>4. After successful payment you will receive an email.
                                 <br>
-                            </li>                             
-                            <li class="pb-2 pt-2 text-danger" style="font-size: 10px;">ATTENTION!&nbsp; If you choose to pay via&nbsp; BTC link, be careful to copy the right link. 
+                            </li>                                                          
+                            <li class="pb-2 pt-2 text-danger" style="font-size: 10px;">ATTENTION!&nbsp; If you choose to pay via the BTC link, be careful to copy the right link. 
                                 <br>All BTC transactions need 15-60 minutes to be completed.
                                 <br>It&apos;s a one-time purchase, NOT A SUBSCRIBE.YOU CHOICE on what month you want access to the group.
                                 <br>If you have problems with payment you can contact support( link below )
